source/objects/Bluescape_TV__c/Bluescape_TV__c.object-meta.xml
<CustomObject>
    <label>Bluescape TV Video</label>
    <nameField>
        <label>Blue S Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bluescape TV Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>