source/objects/Bluescape_TV__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>How-To</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>More Videos</fullName>
            </value>
            <value>
                <fullName>Our Top Picks</fullName>
            </value>
            <value>
                <fullName>Work Better With Bluescape</fullName>
            </value>
            <value>
                <fullName>Open Sessions Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>