source/objects/Bluescape_TV__c/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <label>Display Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>