source/objects/Bluescape_TV__c/fields/Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Home_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Page</label>
    <type>Checkbox</type>
</CustomField>