source/objects/Bluescape_TV__c/fields/Home_Page_Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Display_Sequence__c</fullName>
    <label>Home Page Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>