source/objects/Bluescape_TV__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>