source/objects/Bluescape_TV__c/fields/RecordingDate__c.field-meta.xml
<CustomField>
    <fullName>RecordingDate__c</fullName>
    <label>Recording Date</label>
    <type>DateTime</type>
</CustomField>