source/objects/Bluescape_TV__c/fields/SiteCategory__c.field-meta.xml
<CustomField>
    <fullName>SiteCategory__c</fullName>
    <inlineHelpText>Corresponds to the sections on the website.</inlineHelpText>
    <label>SiteCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiteCategories</valueSetName>
    </valueSet>
</CustomField>